<resources>
    <string name="app_name">Rural Work Inspection</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">UserName</string>
    <string name="btn_login">Login</string>
    <string name="font_medium">din_pro_medium.otf</string>
    <string name="font_light">din_pro_light.otf</string>
    <string name="font_circular_medium">circular-medium.ttf</string>
    <string name="font_circular_bold">circular-bold.ttf</string>
    <string name="font_circular_book">circular-book.ttf</string>
    <string name="roboto_light">ROBOTO-LIGHT.TTF</string>
    <string name="roboto_medium">ROBOTO-MEDIUM.TTF</string>
    <string name="font_circular_black">circular-black.ttf</string>
    <string name="font_normal">Avenir-Roman.ttf</string>
    <string name="no_internet">Your internet seems to be offline!</string>
    <string name="view_image">View Inspected Image</string>
    <string name="view_action_image">View Action Image</string>
    <string name="take_action">Take Action</string>
    <string name="view_action">View Action</string>
    <string name="action_taken_tv">Select Work For Action</string>
    <string name="init_vector">2SN22SkJGDyOAXUU</string>
    <string name="click_to_download_your_inspecting_block">Click to Download your Inspecting Block</string>
    <string name="click_to_download_your_inspecting_financial_year">Click to Download your Inspecting Financial Year</string>
    <string name="click_to_download_your_inspecting_scheme">Click to Download your Inspecting Scheme</string>
    <string name="select_scheme">Select Scheme</string>
    <string name="select_village">Select Village</string>
    <string name="select_block">Select Block</string>
    <string name="financial_year">Financial Year</string>
    <string name="finyear_dialog_title">Select Financial year</string>
    <string name="district_dialog_title">Select District</string>
    <string name="block_dialog_title">Select Block</string>
    <string name="inspected_officers_title">Select Inspected Officers</string>
    <string name="village_dialog_title">Select Village</string>
    <string name="scheme_dialog_title">Select Scheme</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="version"><u>Version</u></string>
</resources>
