<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCBCBC"
    tools:context="com.nic.RuralInspection.Activity.Dashboard">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_with_center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom" />

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/toolbar"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:orientation="horizontal">-->

    <!--<LinearLayout-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="4"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical">-->

    <!--</LinearLayout>-->


    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical">-->

    <!--<com.nic.RuralInspection.Support.MyCustomTextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="start"-->
    <!--android:paddingBottom="5dp"-->
    <!--android:paddingLeft="5dp"-->
    <!--android:paddingRight="5dp"-->
    <!--android:text="District:"-->
    <!--android:textAlignment="center"-->
    <!--android:textColor="#FF0000"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="normal"-->
    <!--customfontdemo:fontName="@string/font_circular_medium" />-->

    <!--</LinearLayout>-->


    <!--<LinearLayout-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="9"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical">-->

    <!--<com.nic.RuralInspection.Support.MyCustomTextView-->
    <!--android:id="@+id/district"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="left"-->
    <!--android:paddingBottom="5dp"-->
    <!--android:paddingLeft="5dp"-->
    <!--android:paddingRight="5dp"-->
    <!--android:text="Thirchy"-->
    <!--android:textAlignment="textStart"-->
    <!--android:textColor="#FF0000"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="normal"-->
    <!--customfontdemo:fontName="@string/font_circular_medium" />-->

    <!--</LinearLayout>-->

    <!--</LinearLayout>-->


    <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/district_card"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/toolbar"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_marginLeft="25dp"-->
    <!--android:layout_marginRight="25dp"-->
    <!--android:layout_marginTop="15dp"-->

    <!--card_view:cardCornerRadius="5dp"-->
    <!--card_view:cardElevation="5dp">-->

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:padding="@dimen/_5sdp"-->
    <!--android:orientation="horizontal">-->

    <!--<com.nic.RuralInspection.Support.MyCustomTextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:paddingLeft="5dp"-->
    <!--android:paddingRight="5dp"-->
    <!--android:text="District:"-->
    <!--android:textAlignment="center"-->
    <!--android:textColor="#FF0000"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="normal"-->
    <!--customfontdemo:fontName="@string/font_circular_medium" />-->

    <!--<com.nic.RuralInspection.Support.MyCustomTextView-->
    <!--android:id="@+id/district_tv"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="left"-->
    <!--android:paddingLeft="5dp"-->
    <!--android:paddingRight="5dp"-->
    <!--android:text="Thirchy"-->
    <!--android:textColor="#FF0000"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="normal"-->
    <!--customfontdemo:fontName="@string/font_circular_medium" />-->

    <!--</LinearLayout>-->
    <!--</android.support.v7.widget.CardView>-->
    <LinearLayout
        android:id="@+id/district_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <com.nic.RuralInspection.Support.MyCustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="District:"
                            android:textAlignment="center"
                            android:textColor="#FF0000"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            customfontdemo:fontName="@string/font_normal" />

                        <com.nic.RuralInspection.Support.MyCustomTextView
                            android:id="@+id/district_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="Kanchipuram"
                            android:textColor="#FF0000"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            customfontdemo:fontName="@string/font_normal" />


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/block_user_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <com.nic.RuralInspection.Support.MyCustomTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="19dp"
                            android:paddingRight="5dp"
                            android:text="Block:"
                            android:textAlignment="center"
                            android:textColor="#FF0000"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            customfontdemo:fontName="@string/font_normal"  />

                        <com.nic.RuralInspection.Support.MyCustomTextView
                            android:id="@+id/block_user_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="Thirchy"
                            android:textColor="#FF0000"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            customfontdemo:fontName="@string/font_normal"  />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/asset_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/district_card"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.9"
                        android:orientation="vertical">

                        <com.nic.RuralInspection.Support.MyCustomTextView
                            android:id="@+id/ble_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="Inspection"
                            android:textColor="#000"
                            android:textSize="18sp"
                            customfontdemo:fontName="@string/font_circular_bold" />


                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="15dp"
                    android:background="#BCBCBC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/upload_inspection_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp"
                        android:layout_weight="0.3"
                        android:orientation="horizontal"
                        android:padding="8dp">


                        <com.nic.RuralInspection.Support.MyCustomTextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:text=""
                            android:textColor="@android:color/black"
                            android:textSize="18dp"
                            android:textStyle="bold"

                            customfontdemo:fontName="@string/font_circular_medium" />

                        <com.nic.RuralInspection.Support.MyCustomTextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:text=""
                            android:textColor="@android:color/black"
                            android:textSize="18dp"
                            android:textStyle="bold"

                            customfontdemo:fontName="@string/font_circular_medium" />


                        <com.nic.RuralInspection.Support.MyCustomTextView
                            android:id="@+id/upload_inspection_report_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:padding="5dp"
                            android:text="Uploading Of Inspection Report for High Value Project"
                            android:textAlignment="gravity"
                            android:textColor="@android:color/black"
                            android:textSize="17sp"
                            android:textStyle="normal"
                            customfontdemo:fontName="@string/font_circular_book" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <com.nic.RuralInspection.Support.MyCustomTextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_10sdp"
        android:text="Sofware Designed &amp; Developed by NIC"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        customfontdemo:fontName="@string/font_circular_medium" />


</RelativeLayout>
